--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -44,7 +44,7 @@
                                                placeholder="your@email.com"
                                                aria-describedby="emailHelp" required/>
                                         <small id="emailHelp" class="form-text text-muted">
-                                            GroupSTUDY! 는 사용자의 이메일을 공개하지 않습니다.
+                                            해당 이메일로 인증에 필요한 코드가 전송될 예정입니다.
                                         </small>
                                         <small class="invalid-feedback">이메일을 입력하세요.</small><br/>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}"
