feat: 태그 내용 변경

--- a/src/main/resources/templates/about-me.html
+++ b/src/main/resources/templates/about-me.html
@@ -24,7 +24,7 @@
         <div class="col-md-8">
             <div class="card shadow-lg fadeInBottom fadeIn1">
                 <div class="card-header p-0 mx-3 mt-3 position-relative z-index-1">
-                    <h2 class="card-title text-info text-gradient fadeInBottom fadeIn2">AboutMe</h2>
+                    <h2 class="card-title text-info text-gradient fadeInBottom fadeIn3">AboutMe</h2>
                 </div>
                 <div class="card-body">
                     <h4 class="font-weight-bolder text-dark fadeInBottom fadeIn3">기본 정보</h4>
@@ -60,7 +60,7 @@
                     <div class="row fadeInBottom fadeIn4">
                         <div class="col-lg-6">
                             <input class="form-control" id="choices-tags" data-color="dark" type="text"
-                                   value="Java, SpringBoot, SpringSecurity, SpringDataJPA, QueryDSl, ThymeLeaf, JUNIT5, MSA기본개념"
+                                   value="Java, JavaScript, SpringBoot, SpringSecurity, SpringDataJPA, QueryDSl, ThymeLeaf, JUNIT5, MSA기본개념"
                                    placeholder="Enter something" readonly/>
                         </div>
                     </div>
